fdo#57079: SvxSuperContourDlg: unregister configuration listener

... in destructor.  Otherwise it will access freed memory when
eventually called.  This crashes since OOo 3.2 but no idea why it would
appear to not crash in earlier versions.

Change-Id: Ie3ab7ddf19fb1086f0b7d824555ab6b063e2b9ad
(cherry picked from commit fc63700181ab0f42eab5f98328074fe1682344f8)
Reviewed-on: https://gerrit.libreoffice.org/3937
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>